GCC Bugzilla – Bug 26059
[4.2 Regression] fenv.h use in libgcc-math
Last modified: 2006-02-01 11:36:54 UTC
http://gcc.gnu.org/ml/gcc-patches/2006-01/msg02241.html http://gcc.gnu.org/ml/gcc/2006-02/msg00004.html
Confirmed.
Subject: Bug 26059 Author: rguenth Date: Wed Feb 1 10:32:22 2006 New Revision: 110470 URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=110470 Log: 2006-02-01 Richard Guenther <rguenther@suse.de> PR bootstrap/26059 * flt-32/e_expf.c: Remove fenv access. Modified: trunk/libgcc-math/ChangeLog trunk/libgcc-math/flt-32/e_expf.c
Fixed.