2006-02-01  Richard Guenther  <rguenther@suse.de>

PR bootstrap/26059
	* flt-32/e_expf.c: Remove fenv access.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@110470 138bc75d-0d04-0410-961f-82ee72b054a4